<resources>
    <string name="app_name">Diabetes Management</string>
    <string name="Email">User Name</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="diabetes_management_label">Diabetes Management</string>
    <string name="fullNameLabel"> Full Name</string>
    <string name="label_history">History</string>
    <string name="label_graph">Graph</string>
    <string name="label_alarm">Alarm</string>
    <string name="button_add_activity">+ ADD ACTIVITY</string>
    <string name="duration">Duration</string>
    <string name="calories">Calories</string>
    <string name="saveButton">Save</string>
    <string name="historyActivity">History</string>
    <string name="EditActivity">Edit Activity</string>
    <string name="AddActivity">Add Activity</string>
    <string name="HomeActivity">Home</string>
    <string name= "Amount">Amount(mg)</string>
    <string name="labelExercise">Exercise</string>
    <string name= "labelMedicine">Medicine</string>
    <string name = "labelFood">Food</string>
    <string name= "lableBGL">BGL</string>
</resources>
