<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"

    style="@style/AppTheme"
    android:background="@color/White"
    android:id="@+id/parentContainer">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal|right"
        android:layout_weight="1"
        android:id="@+id/TopContainer">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:layout_marginTop="20dp"
            android:id="@+id/ImageButtonContainer">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButtonHistory"
                android:src="@mipmap/history_icon"
                android:layout_weight="1"
                android:background="#00000000"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButtonGraph"
                android:src="@mipmap/graph_icon"
                android:layout_weight="1"
                android:background="@color/White" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButtonAlarm"
                android:src="@mipmap/alarm_icon"
                android:layout_weight="1"
                android:background="#00000000"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:id="@+id/ImageButtonTextContainer">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_history"
                android:id="@+id/labelHistory"
                android:layout_weight="1"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_graph"
                android:id="@+id/labelGraph"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_alarm"
                android:id="@+id/labelAlarm"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:id="@+id/AddActivityButtonContainer">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_add_activity"
                android:id="@+id/buttonAddActivity"
                android:padding="20dp"
                android:background="@color/add_activity_button_color"
                android:textColor="@color/White"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:onClick="onButtonAddActivityClick"
                android:nestedScrollingEnabled="false" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.7"
        android:background="#e6e6e6"
        android:id="@+id/BottomContainer">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:ems="10"
                android:id="@+id/txtDaily"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:hint = "-"
                android:editable="false"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtWeekly"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:hint = "-"
                android:editable="false"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtMonthly"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:hint = "-"
                android:editable="false"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Daily"
                android:id="@+id/labelDaily"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Weekly"
                android:id="@+id/labelWeekly"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Monthly"
                android:id="@+id/labelMonthly"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Average Glucose level"
                android:id="@+id/labelAverageGlucoselevel" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>